--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Quiz App</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz Application</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="quiz-container">
-    <h1>Simple Quiz</h1>
-    <div id="question">Question comes here</div>
-    <div id="answer-buttons">
-      <!-- Buttons will go here using JavaScript -->
+    <div class="container">
+        <div id="app"></div>
     </div>
-    <button id="next-btn">Next</button>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
