feat: Add History subject and enhance quiz app UI/UX
- Add new History subject with 5 historical questions
- Implement modern glassmorphism design with backdrop blur effects
- Add floating background animations for visual appeal
- Enhance subject cards with icons and descriptions
- Add progress bar and question counter in quiz interface
- Implement choice buttons with letter indicators (A, B, C, D)
- Add visual feedback with correct/incorrect animations
- Include audio feedback for answer responses
- Add detailed results screen with performance metrics
- Implement responsive design for mobile devices
- Add welcome screen with modern typography
- Include Font Awesome icons throughout the interface
- Add smooth animations and transitions
- Implement time tracking and speed calculation
- Add performance-based messages and emojis
- Include detailed score breakdown and statistics

Technical improvements:
- Modern CSS with Inter font family
- Enhanced accessibility with proper ARIA labels
- Improved code organization and structure
- Better error handling and fallbacks
- Optimized animations and performance

--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Application</title>
+    <meta name="description" content="Interactive Quiz App - Test your knowledge in Math, English, and Science">
+    <meta name="keywords" content="quiz, education, learning, interactive">
+    <title>🎓 Smart Quiz - Interactive Learning</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <div id="app"></div>
+    </div>
+    <div class="background-animation">
+        <div class="floating-shapes">
+            <div class="shape shape-1"></div>
+            <div class="shape shape-2"></div>
+            <div class="shape shape-3"></div>
+            <div class="shape shape-4"></div>
+            <div class="shape shape-5"></div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
